--- a/src/covid19/covid19.html
+++ b/src/covid19/covid19.html
@@ -325,12 +325,11 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="HostelPostel.html" class="active" style="text-decoration:none;">Home</a></li>
-                    <li><a href="Hotels.html" style="text-decoration:none;">Hotels</a></li>
-                    <li><a href="Things.html" style="text-decoration:none;">Things to do</a></li>
-                    <li><a href="Resto.html" style="text-decoration:none;">Restaurants</a></li>
-                    <li><a href="ContactForm.html" style="text-decoration:none;">Contact</a></li>
-                    <li><a href="AboutUS.html" style="text-decoration:none;">About</a></li>
+                    <li><a href="../../HostelPostel.html" class="active" style="text-decoration:none;">Home</a></li>
+                    <li><a href="../Hotels/Hotels.html" style="text-decoration:none;">Hotels</a></li>
+                    <li><a href="../Resto/Resto.html" style="text-decoration:none;">Restaurants</a></li>
+                    <li><a href="../ContactForm/ContactForm.html" style="text-decoration:none;">Contact</a></li>
+                    <li><a href="../AboutUs/AboutUS.html" style="text-decoration:none;">About</a></li>
                 </ul>
             </div>
         </div>
@@ -422,17 +421,17 @@
   	 		<div class="footer-col">
   	 			<h4>Company</h4>
   	 			<ul>
-  	 				<li><a href="AboutUS.html">About us</a></li>
-  	 				<li><a href="PrivacyPolicy.html">Privacy policy</a>
-					</li><li><a href="#top">Back to the top</a></li>
+  	 				<li><a href="../AboutUs/AboutUS.html">About us</a></li>
+  	 				<li><a href="../PrivacyPolicy/PrivacyPolicy.html">Privacy policy</a></li>
+					<li><a href="#top">Back to the top</a></li>
   	 			</ul>
   	 		</div>
   	 		<div class="footer-col">
   	 			<h4>Get Help</h4>
   	 			<ul>
-  	 				<li><a href="FAQ.html">FeedBack</a></li>
-  	 				<li><a href="ContactForm.html">Contact Us</a></li>
-  	 				<li><a href="covid19.html">Covid-19 Safety Measures</a></li>
+  	 				<li><a href="../FAQ/FAQ.html">FeedBack</a></li>
+  	 				<li><a href="../ContactForm/ContactForm.html">Contact Us</a></li>
+  	 				<li><a href="../covid19/covid19.html">Covid-19 Safety Measures</a></li>
   	 			</ul>
   	 		</div>
 
